resolução de exercicios responsividade

--- a/aula-1/exercicio-1/css/style.css
+++ b/aula-1/exercicio-1/css/style.css
@@ -13,7 +13,8 @@ a {
 }
 
 img {
-    width: 85%; /* define o comprimento */
+    width: 100%; /* define o comprimento */
+    display: inline-block;
 }
 
 /* FONTS */
@@ -28,9 +29,8 @@ h2 {
 }
 
 p {
-    width: 430px;
-    margin-bottom: 110px;
-    text-align: right;  
+    max-width: 430px;
+    margin: 0 auto 110px auto;
 }
 
 /* UTILITIES */
@@ -49,7 +49,7 @@ p {
 }
 
 .section-sobre {
-   width: 960px;
+    max-width: 960%;   /**/
    margin: 0 auto; /* macete para deixar elementos block centralizados */
    margin-top: 100px;
 }
@@ -73,3 +73,58 @@ p {
     border: 1px solid #5d1277; /* cria uma borda no elemento. Ordem de valores: grossura-da-borda tipo-da-borda cor-da-borda. */
 }
 
+/* Media Query */
+/* 300px - 370px */
+@media (max-width: 370px) and (min-width: 300px) {
+    .sobre-conteudo__img {
+    width: 160px;
+    }
+    }
+    
+    /* 0 - 300px */
+    @media (max-width: 300px) {
+    .sobre-conteudo__img {
+    width: 130px;
+    }
+    }
+    
+    /*
+    max: até
+    min: a partir de
+    */
+    
+    /*
+    max-width: 700px - até 700px
+    min-width: 250px - a partir de 250px
+    */ 
+    
+    
+    ------------------
+    
+    
+    
+    /* Media queries */
+    @media screen and (max-width: 800px) {
+        .sobre-conteudo, .sobre-imagem {
+            width: 100%;
+        }
+    
+        h1, h2, p {
+            text-align: center;
+        }
+    
+        p {
+            max-width: 430px;
+            margin: 0 auto 110px auto;
+        }
+    
+        .sobre-conteudo__botoes {
+            text-align: center;
+        }
+    
+        img {
+            width: 100%;
+            margin-top: 40px;
+        }
+    }
+    
