--- a/aula-1/exercicio-2/css/style.css
+++ b/aula-1/exercicio-2/css/style.css
@@ -26,13 +26,16 @@ h2 {
 /* SEÇÃO SOBRE */
 .secao-sobre {
     background-color: white;
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
 }
 
 .sobre-conteudo__img {
     margin-top: 80px;
-}  
+    width: 100%;
+    max-width: 230px;
+}
+ 
     
 .sobre-conteudo {
     font-family: 'Lato', sans-serif;
@@ -51,5 +54,11 @@ h2 {
     margin-left: 40px;
 }
 
+@media screen and (max-width: 400px)
+{
+    h1{
+        font-size: 30px;
+    }
+}
 
 
